<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">AnyMemo</string>
    <string name="app_full_name">AnyMemo</string>
    <string name="website_versions_view">https://anymemo.org/versions-view</string>
    <string name="ok_text">OK</string>
    <string name="cancel_text">Cancel</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="back_menu_text">Back</string>
    <string name="detail_menu_text">Detail</string>
    <string name="settings_menu_text">Settings</string>
    <string name="speak_question_menu_text">Speak question</string>
    <string name="speak_answer_menu_text">Speak answer</string>
    <string name="undo_text">Undo</string>
    <string name="undo_fail_text">Unable to undo</string>
...
    <string name="downloader_download_alert_message">Details:&lt;br&gt;</string>
    <string name="about_title">About</string>
    <string name="about_text">Advanced spaced repetition flashcard learning software.&lt;br /&gt;&lt;br /&gt;Authors: Haowen Ning, Qi Wang&lt;br /&gt;&lt;br /&gt;Website: &lt;a href="https://anymemo.org"&gt;https://anymemo.org&lt;/a&gt; &lt;br /&gt;&lt;br /&gt;Acknowledge: Piotr Bazan, pomelo422, Haimivan, williamfeng, Lyndsey Percival, John Rissler, Dongping Xie&lt;br /&gt;&lt;br /&gt;Translators
    <string name="about_version">Version history</string>
    <string name="what_is_new">New version installed</string>
    <string name="downloader_categories">Categories</string>
    <string name="use_hint">Use hints for this quiz</string>

    <string name="interface_locale_title">Interface language</string>
    <string name="interface_locale_summary">Choose the language of the user interface. Please restart AnyMemo to take effect.</string>
    <string name="settings_typeface_question">User-defined question font (TTF)</string>
    <string name="settings_typeface_answer">User-defined answer font (TTF)</string>
    <string name="learn_ahead">Cram review</string>
...
    <string name="day_text">day</string>
    <string name="quiz_text">Quiz</string>
    <string name="quiz_by_group_text">Quiz by group</string>
    <string name="quiz_by_category_text">Quiz by category</string>
    <string name="quiz_group_size_text">Quiz group size</string>
    <string name="quiz_group_number_text">Quiz group number</string>
    <string name="start_quiz_text">Start quiz</string>
    <string name="override_audio_warning_text">Are you sure you want to override current audio?</string>
    <string name="enable_animation_text">Enable animation</string>
    <string name="enable_animation_summary">Enable the animation for card transition.</string>
    <string name="quiz_completed_text">Quiz completed</string>
    <string name="new_cards_completed_summary">You have completed the quiz. Do you want to review it?</string>
    <string name="review_text">Review</string>
...
    <string name="record_audio_permission_denied_message">AnyMemo could not get permission to record audio.</string>
    <string name="write_storage_permission_denied_message">AnyMemo could not get permission to write db file on external storage.</string>
    <string name="db_file_is_corrupted_text">DB file is corrupted</string>
    <string name="clear_text">Clear</string>
    <string name="change_directory_permission_denied_message">AnyMemo could not get permission to change to the directory.</string>
    <string name="directory_empty_text">(Empty directory)</string>
    <string name="more_text">MORE</string>
    <string name="dropbox_item_description">Date: %1$s&lt;br&gt;Size: %2$d bytes</string>
    <string name="locale_esperanto_text">Esperanto</string>
    <string name="google_sign_in_not_successful_error_text">Google sign in is not successful</string>
    <string name="google_sign_in_empty_error_text">Google sign in result is empty</string>
    <string name="google_sign_in_account_empty_result">Unable to get Google account</string>
    <string name="show_hint">Show hint</string>
...
    <string name="spell_hint">Type out the answer</string>
    <string name="add_to_study_mode">Add to study mode</string>
    <string name="spell_hint_btn_text">Verify answer</string>
    <string name="workout_text">Workout Mode</string>

    <string name="spell_test">Type out the answer</string>
    <string name="add_to_workout_mode">Add to workout</string>
    <string name="add_to_workout_mode_message">By adding this deck to workout mode, you will be able
        to study a number of cards every day .</string>
    <string name="add_start_date">Add start date</string>
    <string name="add_start_date_message">""</string>
    <string name="add_number_of_days">Add number of days</string>
    <string name="add_number_of_days_message">Add number of days</string>
    <string name="enable_notification">Notify me for my next workout</string>
    <string name="number_days_button">Select number of days</string>
    <string name="number_cards_button">Select number of cards</string>
    <string name="add_number_of_cards">Add number of cards</string>
    <string name="tags">Tags</string>
    <string name="add_tag">Add a Tag</string>
    <string name="add_a_tag">Add a tag</string>
    <string name="add_tag_name">Add tag Name</string>
    <string name="today_card">Number of cards today: </string>
...
