...
        android:id="@+id/shuffle_checkbox"
        android:text="@string/shuffling_cards_title" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/use_quiz_checkbox"
        android:text="@string/use_hint" />
    <Button android:id="@+id/start_quiz_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/start_quiz_text" />
</LinearLayout>
</ScrollView>
...
