...
                android:layout_gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:id="@+id/quiz"
            style="@style/list_button"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="@dimen/tab_icon_size"
                android:layout_height="@dimen/tab_icon_size"
                android:gravity="center"
...
