...


        </LinearLayout>
    </com.daimajia.swipe.SwipeLayout>

            <RelativeLayout
                android:id="@+id/button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:gravity="center"
                >
...
                android:gravity="center"
                android:padding="8dp"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <com.github.aakira.expandablelayout.ExpandableLinearLayout
                android:id="@+id/expandableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView"
                android:orientation="vertical"
                app:ael_duration="400"
                app:ael_expanded="false"
...
                    android:padding="@dimen/margin_normal"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    />

                <Button
                    android:id="@+id/start_workout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="START WORKOUT!"/>

            </com.github.aakira.expandablelayout.ExpandableLinearLayout>


</RelativeLayout>
